--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "aos": "^2.3.4",
+    "leaflet": "^1.9.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
